--- a/css/style.css
+++ b/css/style.css
@@ -15,4 +15,44 @@ html {
   margin: 0 auto;
   width: 100%;
   max-width: 1200px;
+}
+
+body {
+  background-color: #D6E6F2;
+}
+
+.section-padding {
+  padding: 3em 1.5em;
+}
+
+.resume {
+  background-color: #F7FBFC;
+  overflow: hidden;
+}
+.resume__header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  background-color: #0074D9;
+}
+.resume__header-img {
+  width: 100%;
+  max-width: 15rem;
+  border-radius: 50%;
+}
+.resume__header-text {
+  color: #F7FBFC;
+}
+.resume__header-text h1 {
+  padding: 0.5em 0;
+  font-size: 2.5rem;
+}
+.resume__header-text-contact p {
+  margin: 0.5rem 0;
+  font-size: 1.5rem;
+}
+.resume__header-text-contact i {
+  margin-right: 0.5em;
 }/*# sourceMappingURL=style.css.map */
