--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,13 @@ body {
   padding: 3em 1.5em;
 }
 
+.section-title {
+  text-align: left;
+  font-size: 1.5em;
+  color: #0074D9;
+  text-transform: uppercase;
+}
+
 .resume {
   background-color: #F7FBFC;
   overflow: hidden;
