--- a/css/style.css
+++ b/css/style.css
@@ -62,4 +62,17 @@ body {
 }
 .resume__header-text-contact i {
   margin-right: 0.5em;
+}
+.resume__experience-box {
+  margin: 1em 0;
+  font-size: 1.4rem;
+}
+.resume__experience-company {
+  font-weight: bold;
+}
+.resume__experience-company i {
+  margin-right: 1em;
+}
+.resume__experience-date {
+  margin: 0.5em 0;
 }/*# sourceMappingURL=style.css.map */
