--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ body {
   padding: 3em 1.5em;
 }
 
+.resume__education.section-padding {
+  padding: 0 1.5em;
+}
+
 .section-title {
   text-align: left;
   font-size: 1.5em;
@@ -74,5 +78,18 @@ body {
   margin-right: 1em;
 }
 .resume__experience-date {
+  margin: 0.5em 0;
+}
+.resume__education-box {
+  padding: 0.7em 0;
+  font-size: 1.4rem;
+}
+.resume__education-school {
+  font-weight: bold;
+}
+.resume__education i {
+  margin-right: 1em;
+}
+.resume__education-date {
   margin: 0.5em 0;
 }/*# sourceMappingURL=style.css.map */
