--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -10,6 +10,10 @@ body {
 	padding: 3em 1.5em;
 }
 
+.resume__education.section-padding {
+    padding: 0 1.5em;
+}
+
 .section-title {
 	text-align: left;
 	font-size: 1.5em;
@@ -61,7 +65,7 @@ body {
 	&__experience {
 		&-box {
 			margin: 1em 0;
-            font-size: 1.4rem;
+			font-size: 1.4rem;
 		}
 
 		&-company {
@@ -70,6 +74,25 @@ body {
 			i {
 				margin-right: 1em;
 			}
+		}
+
+		&-date {
+			margin: 0.5em 0;
+		}
+	}
+
+	&__education {
+		&-box {
+			padding: 0.7em 0;
+            font-size: 1.4rem;
+		}
+
+		&-school {
+			font-weight: bold;
+		}
+
+		i {
+			margin-right: 1em;
 		}
 
         &-date {
