--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -11,7 +11,7 @@ body {
 }
 
 .resume__education.section-padding {
-    padding: 0 1.5em;
+	padding: 0 1.5em;
 }
 
 .section-title {
@@ -26,6 +26,8 @@ body {
 .resume {
 	background-color: $light-color;
 	overflow: hidden;
+
+	// HEADER
 
 	&__header {
 		display: flex;
@@ -62,6 +64,8 @@ body {
 		}
 	}
 
+	// EXPERIENCE
+
 	&__experience {
 		&-box {
 			margin: 1em 0;
@@ -81,10 +85,12 @@ body {
 		}
 	}
 
+	// EDUCATION
+
 	&__education {
 		&-box {
 			padding: 0.7em 0;
-            font-size: 1.4rem;
+			font-size: 1.4rem;
 		}
 
 		&-school {
@@ -95,8 +101,26 @@ body {
 			margin-right: 1em;
 		}
 
-        &-date {
-            margin: 0.5em 0;
-        }
+		&-date {
+			margin: 0.5em 0;
+		}
+	}
+
+	// SKILLS
+
+	&__skills {
+		&-box {
+			padding: 1em 0;
+            font-size: 1.4rem;
+
+			&-title {
+				display: flex;
+				align-items: center;
+			}
+
+            h4 {
+                margin-left: 0.2em;
+            }
+		}
 	}
 }
