--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html {
 .wrapper {
   margin: 0 auto;
   width: 100%;
-  max-width: 1200px;
+  max-width: 800px;
 }
 
 body {
@@ -25,7 +25,8 @@ body {
   padding: 3em 1.5em;
 }
 
-.resume__education.section-padding {
+.resume__education.section-padding,
+.resume__interests.section-padding {
   padding: 0 1.5em;
 }
 
@@ -39,6 +40,7 @@ body {
 .resume {
   background-color: #F7FBFC;
   overflow: hidden;
+  font-size: 1.4rem;
 }
 .resume__header {
   display: flex;
@@ -69,7 +71,6 @@ body {
 }
 .resume__experience-box {
   margin: 1em 0;
-  font-size: 1.4rem;
 }
 .resume__experience-company {
   font-weight: bold;
@@ -82,7 +83,6 @@ body {
 }
 .resume__education-box {
   padding: 0.7em 0;
-  font-size: 1.4rem;
 }
 .resume__education-school {
   font-weight: bold;
@@ -95,7 +95,6 @@ body {
 }
 .resume__skills-box {
   padding: 1em 0;
-  font-size: 1.4rem;
 }
 .resume__skills-box-title {
   display: flex;
@@ -103,4 +102,14 @@ body {
 }
 .resume__skills-box h4 {
   margin-left: 0.2em;
+}
+.resume__interests-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 1em 0;
+}
+.resume__interests-box img {
+  height: 40px;
 }/*# sourceMappingURL=style.css.map */
