--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -10,7 +10,8 @@ body {
 	padding: 3em 1.5em;
 }
 
-.resume__education.section-padding {
+.resume__education.section-padding,
+.resume__interests.section-padding {
 	padding: 0 1.5em;
 }
 
@@ -26,6 +27,7 @@ body {
 .resume {
 	background-color: $light-color;
 	overflow: hidden;
+    font-size: 1.4rem;
 
 	// HEADER
 
@@ -69,7 +71,6 @@ body {
 	&__experience {
 		&-box {
 			margin: 1em 0;
-			font-size: 1.4rem;
 		}
 
 		&-company {
@@ -90,7 +91,6 @@ body {
 	&__education {
 		&-box {
 			padding: 0.7em 0;
-			font-size: 1.4rem;
 		}
 
 		&-school {
@@ -111,15 +111,28 @@ body {
 	&__skills {
 		&-box {
 			padding: 1em 0;
-            font-size: 1.4rem;
 
 			&-title {
 				display: flex;
 				align-items: center;
 			}
 
-            h4 {
-                margin-left: 0.2em;
+			h4 {
+				margin-left: 0.2em;
+			}
+		}
+	}
+
+	&__interests {
+		&-box {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+            flex-direction: column;
+            margin: 1em 0;
+
+            img {
+                height: 40px;
             }
 		}
 	}
