--- a/css/style.css
+++ b/css/style.css
@@ -127,4 +127,9 @@ body {
   .resume {
     margin: 1.5em;
   }
+}
+@media print {
+  .resume__header {
+    color: #000;
+  }
 }/*# sourceMappingURL=style.css.map */
