fixed media print

--- a/sass/breakpoints/_print.scss
+++ b/sass/breakpoints/_print.scss
@@ -1,7 +1,9 @@
 @media print {
     .resume {
         &__header {
-            color: #000;
+            &-text {
+                color: #000;
+            }
         }
     }
 }
