--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ body {
   }
 }
 @media print {
-  .resume__header {
+  .resume__header-text {
     color: #000;
   }
 }/*# sourceMappingURL=style.css.map */
