--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -71,6 +71,13 @@ body {
 	&__experience {
 		&-box {
 			margin: 1em 0;
+
+			ul {
+				padding: 0 1.1em;
+				li {
+					margin: 0.5em 0;
+				}
+			}
 		}
 
 		&-company {
@@ -143,4 +150,5 @@ body {
             }
 		}
 	}
+
 }
