--- a/sass/breakpoints/_small.scss
+++ b/sass/breakpoints/_small.scss
@@ -1,12 +1,26 @@
 @media (min-width: 576px) {
-    .resume {
-        &__header {
-            flex-direction: row;
-            justify-content: space-evenly;
+	.resume {
+		&__header {
+			flex-direction: row;
+			justify-content: space-evenly;
 
-            &-text {
-                text-align: left;
-            }
-        }
-    }
+			&-text {
+				text-align: left;
+			}
+		}
+
+		&__interests {
+			&-container {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				flex-direction: row;
+				flex-wrap: wrap;
+			}
+			&-box {
+				padding: 1em;
+				width: 50%;
+			}
+		}
+	}
 }
