--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -144,6 +144,7 @@ body {
 			align-items: center;
             flex-direction: column;
             margin: 1em 0;
+			text-align: center;
 
             img {
                 height: 40px;
