--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,8 @@ body {
   bottom: -0.4em;
   display: flex;
 }
-.resume__header-buttons button {
+.resume__header-buttons button,
+.resume__header-buttons a {
   margin: 0 0.5em;
   padding: 0.2em;
   border: none;
@@ -68,13 +69,16 @@ body {
   cursor: pointer;
   transition: background-color 0.3s;
 }
-.resume__header-buttons button i {
+.resume__header-buttons button i,
+.resume__header-buttons a i {
   transition: color 0.3s;
 }
-.resume__header-buttons button:hover {
+.resume__header-buttons button:hover,
+.resume__header-buttons a:hover {
   background-color: #F7FBFC;
 }
-.resume__header-buttons button:hover i {
+.resume__header-buttons button:hover i,
+.resume__header-buttons a:hover i {
   color: #0074D9;
 }
 .resume__header-img {
