--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -25,6 +25,7 @@ body {
 // RESUME
 
 .resume {
+	position: relative;
 	background-color: $light-color;
 	overflow: hidden;
 	font-size: 1.4rem;
@@ -184,4 +185,5 @@ body {
 			}
 		}
 	}
+
 }
