change img, css files

--- a/css/styles.css
+++ b/css/styles.css
@@ -202,4 +202,4 @@ body {
   .resume__education, .resume__interests {
     page-break-inside: avoid;
   }
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=styles.css.map */
