--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,3 +1,277 @@
-@use 'base';
-@use 'layout';
-@use 'breakpoints';
+@use './colors' as *;
+
+*,
+*::before,
+*::after {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	background-color: $bg-color;
+}
+
+html {
+	font-size: 62.5%;
+	font-family: 'Montserrat', sans-serif;
+}
+
+// COMMON
+
+.section-padding {
+	padding: 1em 1.5em;
+}
+
+.resume__skills.section-padding,
+.resume__interests.section-padding {
+	padding: 0 1.5em;
+}
+
+.section-title {
+	text-align: left;
+	font-size: 1.5em;
+	color: $main-color;
+	text-transform: uppercase;
+}
+
+.wrapper {
+	margin: 0 auto;
+	width: 100%;
+	max-width: 800px;
+}
+
+// RESUME
+
+.resume {
+	position: relative;
+	background-color: $light-color;
+	overflow: hidden;
+	font-size: 1.4rem;
+
+	// HEADER
+
+	&__header {
+		position: relative;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		padding-bottom: 3em;
+		text-align: center;
+		background-color: $main-color;
+
+		&-buttons {
+			position: absolute;
+			bottom: -0.4em;
+			display: flex;
+
+			button,
+			a {
+				margin: 0 0.5em;
+				padding: 0.2em;
+				border: none;
+				border-radius: 8px;
+				background: none;
+				font-size: 1.7em;
+				color: $light-color;
+				cursor: pointer;
+				transition: background-color 0.3s;
+
+				i {
+					transition: color 0.3s;
+				}
+			}
+
+			button:hover,
+			a:hover {
+				background-color: $light-color;
+
+				i {
+					color: $main-color;
+				}
+			}
+		}
+
+		&-img {
+			width: 100%;
+			max-width: 15rem;
+			border-radius: 50%;
+		}
+
+		&-text {
+			color: $light-color;
+
+			h1 {
+				padding: 0.5em 0;
+				font-size: 2.5rem;
+			}
+
+			&-contact {
+				p {
+					margin: 0.5rem 0;
+					font-size: 1.5rem;
+				}
+
+				i {
+					margin-right: 0.5em;
+				}
+			}
+		}
+	}
+
+	// EXPERIENCE
+
+	&__experience {
+		&-box {
+			margin: 1em 0;
+
+			ul {
+				padding: 0 1.1em;
+				li {
+					margin: 0.5em 0;
+				}
+			}
+		}
+
+		&-company {
+			font-weight: bold;
+
+			i {
+				margin-right: 1em;
+			}
+		}
+
+		&-date {
+			margin: 0.5em 0;
+		}
+	}
+
+	// SKILLS
+
+	&__skills {
+		&-list {
+			list-style-type: none;
+			padding: 0;
+		}
+		&-box {
+			padding: 1em 0;
+			&-title {
+				display: flex;
+				align-items: center;
+			}
+
+			h4 {
+				margin-left: 0.2em;
+			}
+		}
+	}
+
+	// EDUCATION
+
+	&__education {
+		&-box {
+			padding: 0.7em 0;
+		}
+
+		&-school {
+			font-weight: bold;
+		}
+
+		i {
+			margin-right: 1em;
+		}
+
+		&-date {
+			margin: 0.5em 0;
+		}
+	}
+
+	// INTERESTS
+
+	&__interests {
+		&-box {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-direction: column;
+			margin: 1em 0;
+			text-align: center;
+
+			img {
+				height: 40px;
+			}
+		}
+	}
+}
+
+// SMALL 576 PX
+
+@media (min-width: 576px) {
+	.resume {
+		&__header {
+			flex-direction: row;
+			justify-content: space-evenly;
+			padding-bottom: 2em;
+
+			&-buttons {
+				right: 1em;
+			}
+
+			&-text {
+				text-align: left;
+			}
+		}
+
+		&__interests {
+			&-container {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				flex-direction: row;
+				flex-wrap: wrap;
+			}
+			&-box {
+				padding: 1em;
+				width: 50%;
+			}
+		}
+	}
+}
+
+// MEDIUM 768 PX
+
+@media (min-width: 768px) {
+	.resume {
+		margin: 1.4em;
+		&__interests {
+			&-box {
+				width: 25%;
+			}
+		}
+	}
+}
+
+// PRINT
+
+@media print {
+	.resume {
+		.section-title {
+			color: #000;
+		}
+		&__header {
+			&-text {
+				color: #000;
+			}
+
+			&-buttons {
+				display: none;
+			}
+		}
+
+		&__education,
+		&__interests {
+			page-break-inside: avoid;
+		}
+	}
+}
