fixed em and rem.scss

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -73,7 +73,7 @@ html {
 				border: none;
 				border-radius: 8px;
 				background: none;
-				font-size: 1.7em;
+				font-size: 1.7rem;
 				color: $light-color;
 				cursor: pointer;
 				transition: background-color 0.3s;
@@ -109,7 +109,7 @@ html {
 
 			&-contact {
 				p {
-					margin: 0.5rem 0;
+					margin: 0.5em 0;
 					font-size: 1.5rem;
 				}
 
